# champion-recommender

./: .env.example  .gitignore  Dockerfile_dagster  Dockerfile_fe  Dockerfile_mlflow  Dockerfile_model_api  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.py
dagster_home/: dagster.yaml  workspace.yaml
dagster_home/data_service/: configs.py  crawler_job.py  load_to_warehouse.py  repository.py
dagster_home/data_service/jobs/: api_crawler.py  champion_crawler.py  load_data_to_warehouse.py  match_crawler.py  training_job.py
dagster_home/data_service/ops/: api_ops.py  load_warehouse_ops.py  model_training_ops.py  sync_table_trino.py
dagster_home/data_service/schedule/: __init__.py  api_crawler_schedule.py  champion_crawler_schedule.py  match_crawler_schedule.py  model_training_schedule.py
dagster_home/data_service/sensors/: __init__.py  warehouse_trigger_sensor.py
dagster_home/data_service/utils/: db_operator.py
data_service/: configs.py  crawler_job.py
data_service/utils/: common.py  db_operator.py
exploration/: model.ipynb
front_end/: app.py
model_pipeline/: main.py
model_pipeline/serving/: predictor.py
model_pipeline/serving/actors/: load_prod_model.py  post_processing.py  predictor.py  recommender.py
model_pipeline/training/: pipeline.py
model_pipeline/training/actors/: load_data.py  matrix_calculator.py
model_pipeline/utils/: trino_operator.py
sql/: define-schemas-trino.sql  init-db-postgres.sql
trino/etc/catalog/: hive.properties
trino/etc/conf/: core-site.xml  metastore-site.xml
