[project]
name = "champion-recommender-project"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas.tran"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
package-mode = false
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "minio (>=7.2.18,<8.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "dagster (>=1.12.0,<2.0.0)",
    "dagster-graphql (>=1.12.0,<2.0.0)",
    "dagster-webserver (>=1.12.0,<2.0.0)",
    "dagster-postgres (>=0.26.0,<1.0.0)",
    "dagster_docker (>=0.27.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.3.0,<5.0.0)"
]
